<resources>
    <string name="app_name">ComicToon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email Address</string>
    <string name="login">Login</string>
    <string name="New">New Here? Register</string>
    <string name="Register">Register</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register1">Already a member? Login</string>
    <string name="home">Home</string>
    <string name="marked">Marked</string>
    <string name="welcome">Hello Comic Reader :)</string>
    <string name="logout">Logout</string>
    <string name="mark">Mark this comic</string>
    <string name="profile">Profile</string>
    <string name="adding">Add/edit personal review</string>
    <string name="save">save</string>
    <string name="personal">Add My Personal Review</string>
    <string name="Cancel">Cancel</string>
    <string name="noMarkComics">No Mark Comics availible here</string>
    <string name="goTo"><![CDATA[Go to Home -> Choose any comic and Mark it!]]></string>
    <string name="noDescription"> This comic has no description</string>
    <string name="comictitle">Comic Title</string>
    <string name="descriptiontext">Description</string>
    <string name="publish">Publish Year</string>
    <string name="publisher">Publisher</string>
    <string name="date">Date</string>
    <string name="publishers">publishers</string>
    <string name="readmore">Read More</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="languagepref">Language Preferences</string>
    <string name="delete_message"> You are about to logout from your account \n Are you sure?</string>
    <string name="logot_notice">Logout Notification</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="comics">Comics</string>
    <string name="comicsdetails">Comic Details</string>
    <string name="markedcomic">Marked Comics</string>
    <string name="video">Video</string>
    <string name="videos">Videos</string>
    <string name="sucessRegi">User Registered Successfully</string>
    <string name="strongPass">"Your password should contain at least 8 characters and \n at least 3 of the following: uppercase, lowercase, or special characters "</string>
    <string name="matchPass">Password fields are not matched</string>
    <string name="require">Required!</string>
    <string name="emailcheck">Your email address should be correct</string>
    <string name="clickagain">Please click BACK again to exit</string>
    <string name="forgot">Forgot your Password?</string>
    <string name="newHere">New Here?</string>
    <string name="resetPass">Reset Password</string>
    <string name="enterEmail">Enter your email</string>
    <string name="sendPass">Send Password</string>
    <string name="passsent">Password Sent Successfully!</string>
    <string name="putEmail">You need to put your Email first !</string>


</resources>