<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".model.identity.RegisterActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="198dp"
        android:layout_height="155dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/bangers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/videotitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/nunito_bold"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/Register"
        android:textColor="@color/red"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <!--    <EditText-->
    <!--        android:id="@+id/r_username_editText"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="20dp"-->
    <!--        android:layout_marginTop="24dp"-->
    <!--        android:layout_marginEnd="20dp"-->
    <!--        android:background="@drawable/strikeshape"-->
    <!--        android:ems="10"-->
    <!--        android:hint="@string/Username"-->
    <!--        android:inputType="text"-->
    <!--        android:padding="15dp"-->
    <!--        android:paddingStart="18dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/r_username_textfield"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/Username"
        app:boxStrokeColor="@color/vdarkred"
        app:errorEnabled="true"
        app:errorTextColor="@color/black"
        app:hintTextColor="@color/vdarkred"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videotitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/black_cursor" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    <EditText-->
    <!--        android:id="@+id/r_password_editText"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="20dp"-->
    <!--        android:layout_marginEnd="20dp"-->
    <!--        android:background="@drawable/strikeshape"-->
    <!--        android:ems="10"-->
    <!--        android:hint="@string/password"-->
    <!--        android:inputType="textPassword"-->
    <!--        android:padding="15dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/r_email_textfield" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/r_password_textfield"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        app:boxStrokeColor="@color/vdarkred"
        app:errorEnabled="true"
        app:errorTextColor="@color/black"
        app:hintTextColor="@color/vdarkred"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_email_textfield">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/black_cursor" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    <EditText-->
    <!--        android:id="@+id/r_passwordconf_editText"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="20dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:layout_marginEnd="20dp"-->
    <!--        android:background="@drawable/strikeshape"-->
    <!--        android:ems="10"-->
    <!--        android:hint="@string/confirmPass"-->
    <!--        android:inputType="textPassword"-->
    <!--        android:padding="15dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.497"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/r_password_editText" />-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/r_passwordCon_textfield"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/confirmPass"
        app:boxStrokeColor="@color/vdarkred"
        app:errorEnabled="true"
        app:errorTextColor="@color/black"
        app:hintTextColor="@color/vdarkred"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_password_textfield">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/black_cursor" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/strikeshape"
        android:padding="15dp"
        android:text="@string/register"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_passwordCon_textfield" />

    <TextView
        android:id="@+id/goToLogin_textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/register1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button"
        tools:ignore="UsingOnClickInXml" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/r_email_textfield"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        app:boxStrokeColor="@color/vdarkred"
        app:errorEnabled="true"
        app:errorTextColor="@color/black"
        app:hintTextColor="@color/vdarkred"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_username_textfield">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/black_cursor" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>